gemini processedManualTestCases gzipcompressoroutputstreamtest4.java